--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
-  "name": "cleanfolio",
+  "name": "portfolio",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://rjshkhr.github.io/cleanfolio",
+  "homepage": "https://ayushi-naphade.github.io/portfolio",
   "dependencies": {
+    "@amcharts/amcharts5": "^5.13.3",
+    "@canvasjs/charts": "^3.12.19",
+    "@canvasjs/react-charts": "^1.0.2",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^5.14.1",
@@ -14,6 +17,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "typewriter-effect": "^2.22.0",
     "uniqid": "^5.4.0",
     "web-vitals": "^2.1.0"
   },
@@ -24,6 +28,7 @@
     "eject": "react-scripts eject --openssl-legacy-provider",
     "lint": "eslint .",
     "format": "prettier --write \"**/*.+(js|jsx|json|css|md)\"",
+    "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
   "browserslist": {
